# safe-AI

./: ALL_CHECKS_PASSING.md  CHECKS_EXPLAINED.md  LICENSE  README.md  SAFE_AI_GOVERNOR_BUILT.md  SECURITY.md  phase3-readme
ASE_Practical_Implementation (1)/: .env.example  .gitignore  BERT_INTEGRATION_GUIDE.md  FILE_MANIFEST.txt  GUI_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_PRODUCTION.md  STAGE2_RESULTS_SUMMARY.md  STAGE3_SUCCESS_REPORT.md  SYSTEM_TEST_SUMMARY.md  launch_gui.sh  quickstart.py  requirements.txt
ASE_Practical_Implementation (1)/gui/: README.md  (+2 more)
safe-ai/: .env.example  .gitignore  00_START_HERE.md  BUILD_SUMMARY.md  CHECK_STATUS.md  DEPLOYMENT.md  Dockerfile  FINAL_VERIFICATION.sh  INSTALLATION.md  LICENSE  PROJECT_MANIFEST.md  QUICK_START.md  README.md  RUN_THIS_TEST.sh  SECURITY.md  VERIFICATION_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt
safe-ai/.github/: README.md
safe-ai/.github/workflows/: ci.yml
safe-ai/app/: __init__.py
safe-ai/app/api/: deps.py  routes.py
safe-ai/app/cli/: __init__.py  main.py
safe-ai/app/cli/cmds/: apply.py  audit.py  keys.py  policy.py  rollback.py  sandbox.py  sign.py  verify.py
safe-ai/app/config/: policy.yaml  settings.example.toml
safe-ai/app/core/: __init__.py  apply.py  audit.py  gate.py  keys.py  kill.py  logging_config.py  metrics.py  models.py  policy_vm.py  rbac.py  sandbox.py
safe-ai/app/tests/: __init__.py
safe-ai/app/tests/integration/: test_workflow.py
safe-ai/app/tests/unit/: test_audit.py  test_gate.py  test_keys.py  test_policy.py
safe-ai/examples/: complex_manifest.json  manifest.json
safe-ai/scripts/: bootstrap.sh  install.sh  sandbox_profile.json  syntax_check.py  validate.py
(+24 files in other folders)
